--- a/index.html
+++ b/index.html
@@ -1,18 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Alert with SweetAlert</title>
-   
-</head>
-<body>
-  
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  
+// Check internet connectivity using navigator.onLine
+function checkInternetConnectivity() {
+
+    if (navigator.onLine) {
+        //alert("You are online!");
+        ShowConGood("You are connected to the Internet");
+    } else {
+        //alert("You are offline.");
+          ShowConBad("You are not connected to the Internet");
+    }
+}
+
+// Listen for online/offline events
+window.addEventListener('online', checkInternetConnectivity);
+window.addEventListener('offline', checkInternetConnectivity);
 
 
 
-<script type="text/javascript"  src="script.js"></script>
-</body>
-</html>
+if (navigator.onLine) {
+
+} 
+else {
+
+// Initial check when the page loads
+checkInternetConnectivity();
+
+}
+
+
+
+ function ShowConGood (message) {
+    Swal.fire({
+        title: 'Internet Connectivity',
+        text: ''+message,
+        icon: 'success',
+        confirmButtonText: 'OK'
+    });
+
+}
+
+
+ function ShowConBad (message) {
+    Swal.fire({
+        title: 'No Internet Connectivity',
+        text: ''+message,
+        icon: 'error',
+        confirmButtonText: 'OK'
+    });
+}
+
+//https://sweetalert.js.org/guides/
