--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ checkInternetConnectivity();
         title: 'Internet Connectivity',
         text: ''+message,
         icon: 'success',
-        confirmButtonText: 'OK'
+        confirmButtonText: 'OK',
+        timer: 1500,
+
     });
 
 }
@@ -44,7 +46,10 @@ checkInternetConnectivity();
         title: 'No Internet Connectivity',
         text: ''+message,
         icon: 'error',
-        confirmButtonText: 'OK'
+        confirmButtonText: 'OK',
+        timer: 1500,
+        
+
     });
 }
 
